@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2004-8   The R Development Core Team.
+ *  Copyright (C) 2004-10   The R Development Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -17,12 +17,42 @@
  *  http://www.r-project.org/Licenses/
  */
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include <R.h>
 #include <Rinternals.h>
 #include <R_ext/GraphicsEngine.h>
 
 #include "grDevices.h"
 #include <R_ext/Rdynload.h>
+
+#ifndef WIN32
+/* This really belongs with the X11 module, but it is about devices */
+static SEXP cairoProps(SEXP in)
+{
+    int which = asInteger(in);
+    if(which == 1)
+	return ScalarLogical(
+#ifdef HAVE_WORKING_CAIRO
+	    1
+#else
+	    0
+#endif
+	    );
+    else if(which == 2)
+	return ScalarLogical(
+#ifdef HAVE_PANGOCAIRO
+	    1
+#else
+	    0
+#endif
+	    );
+    return R_NilValue;
+}
+#endif
+
 
 static R_NativePrimitiveArgType R_chull_t[] = {INTSXP, REALSXP, INTSXP, INTSXP, INTSXP, INTSXP, INTSXP, INTSXP, INTSXP};
 
@@ -48,6 +78,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"R_GD_nullDevice", (DL_FUNC) &R_GD_nullDevice, 0},
 #ifndef WIN32
     CALLDEF(makeQuartzDefault, 0),
+    CALLDEF(cairoProps, 1),
 #endif
     {NULL, NULL, 0}
 };
